--- a/index.html
+++ b/index.html
@@ -6,6 +6,117 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>This is an example project</h1>
+    <header>
+      <a href="index.html">WebStudio</a>
+      <nav>
+        <ul>
+          <li>Studio</li>
+          <li>Portfolio</li>
+          <li>Contacts</li>
+        </ul>
+      </nav>
+      <ul>
+        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+      </ul>
+      <h1>
+        Effective Solutionsfor <br />
+        Your Business
+      </h1>
+      <button type="button">Order Service</button>
+    </header>
+
+    <main>
+      <section>
+        <ul>
+          <li>
+            <h2>Strategy</h2>
+            <p>
+              Our goal is to identify the business problem to walk away with the
+              perfect and creative solution.
+            </p>
+          </li>
+          <li>
+            <h2>Punctuality</h2>
+            <p>
+              Bring the key message to the brand's audience for the best price
+              within the shortest possible time.
+            </p>
+          </li>
+          <li>
+            <h2>Diligence</h2>
+            <p>
+              Research and confirm brands that present the strongest digital
+              growth opportunities and minimize risk.
+            </p>
+          </li>
+          <li>
+            <h2>Technologies</h2>
+            <p>
+              Design practice focused on digital experiences. We bring forth a
+              deep passion for problem-solving.
+            </p>
+          </li>
+        </ul>
+      </section>
+
+      <section>
+        <h2>Our Team</h2>
+        <ul>
+          <li>
+            <img
+              src="img/img-1.jpg"
+              width="264px"
+              height="260px"
+              alt="photo Mark Guerrero Product Designer"
+            />
+            <h3>Mark Guerrero</h3>
+            <p>Product Designer</p>
+          </li>
+
+          <li>
+            <img
+              src="img/img-2.jpg"
+              width="264px"
+              height="260px"
+              alt="photo Tom Ford Frontend Developer"
+            />
+            <h3>Tom Ford</h3>
+            <p>Frontend Developer</p>
+          </li>
+
+          <li>
+            <img
+              src="img/img-3.jpg"
+              width="264px"
+              height="260px"
+              alt="photo Camila Garcia Marketing"
+            />
+            <h3>Camila Garcia</h3>
+            <p>Marketing</p>
+          </li>
+
+          <li>
+            <img
+              src="img/img-4.jpg"
+              width="264px"
+              height="260px"
+              alt="photo Daniel Wilson UI Designer"
+            />
+            <h3>Daniel Wilson</h3>
+            <p>UI Designer</p>
+          </li>
+        </ul>
+      </section>
+    </main>
+
+    <footer>
+      <a href="index.html">WebStudio</a>
+      <p>
+        Increase the flow of customers and <br />
+        sales for your business with digital <br />
+        marketing & growth solutions.
+      </p>
+    </footer>
   </body>
 </html>
