--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
     </header>
 
     <main>
-      <section>
+      <section 1>
         <h1>Effective Solutionsfor Your Business</h1>
         <button type="button">Order Service</button>
-      </section>
+      </section 1>
 
       <section>
         <h2></h2>
