--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
 
     <main>
       <section 1>
-        <h1> Effective Solutions for Your Business </h1>
+        <h1>Effective Solutions for Your Business</h1>
         <button type="button">Order Service</button>
       </section 1>
 
       <section>
-        <h2></h2>
+        <h2>a</h2>
         <ul>
           <li>
             <h3>Strategy</h3>
@@ -70,11 +70,11 @@
       </section>
 
       <section>
-        <h3>Our Team</h3>
+        <h2>Our Team</h2>
         <ul>
           <li>
             <img
-              src="img/img-1.jpg"
+              src="./img/img-1.jpg"
               width="264px"
               height="260px"
               alt="photo Mark Guerrero Product Designer"
@@ -85,7 +85,7 @@
 
           <li>
             <img
-              src="img/img-2.jpg"
+              src="./img/img-2.jpg"
               width="264px"
               height="260px"
               alt="photo Tom Ford Frontend Developer"
@@ -96,7 +96,7 @@
 
           <li>
             <img
-              src="img/img-3.jpg"
+              src="./img/img-3.jpg"
               width="264px"
               height="260px"
               alt="photo Camila Garcia Marketing"
@@ -107,7 +107,7 @@
 
           <li>
             <img
-              src="img/img-4.jpg"
+              src="./img/img-4.jpg"
               width="264px"
               height="260px"
               alt="photo Daniel Wilson UI Designer"
