--- a/index.html
+++ b/index.html
@@ -35,8 +35,10 @@
         <button type="button">Order Service</button>
       </section 1>
 
-      <section>
-        <h2>a</h2>
+      <section 2>
+        <span styles="visibility: hidden;">
+          <h2>hidden header</h2>
+        </span>
         <ul>
           <li>
             <h3>Strategy</h3>
@@ -67,9 +69,9 @@
             </p>
           </li>
         </ul>
-      </section>
+      </section 2>
 
-      <section>
+      <section 3>
         <h2>Our Team</h2>
         <ul>
           <li>
@@ -116,7 +118,8 @@
             <p>UI Designer</p>
           </li>
         </ul>
-      </section>
+      </section 3>
+
     </main>
 
     <footer>
