--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@
         <ul>
           <li>
             <img
-              src="./img/img-1.jpg"
-              width="264px"
-              height="260px"
+              src="./images/img-1.jpg"
+              width="264"
+              height="260"
               alt="photo Mark Guerrero Product Designer"
             />
             <h3>Mark Guerrero</h3>
@@ -87,9 +87,9 @@
 
           <li>
             <img
-              src="./img/img-2.jpg"
-              width="264px"
-              height="260px"
+              src="./images/img-2.jpg"
+              width="264"
+              height="260"
               alt="photo Tom Ford Frontend Developer"
             />
             <h3>Tom Ford</h3>
@@ -98,9 +98,9 @@
 
           <li>
             <img
-              src="./img/img-3.jpg"
-              width="264px"
-              height="260px"
+              src="./images/img-3.jpg"
+              width="264"
+              height="260"
               alt="photo Camila Garcia Marketing"
             />
             <h3>Camila Garcia</h3>
@@ -109,9 +109,9 @@
 
           <li>
             <img
-              src="./img/img-4.jpg"
-              width="264px"
-              height="260px"
+              src="./images/img-4.jpg"
+              width="264"
+              height="260"
               alt="photo Daniel Wilson UI Designer"
             />
             <h3>Daniel Wilson</h3>
@@ -123,10 +123,10 @@
     </main>
 
     <footer>
-      <a href="index.html">WebStudio</a>
+      <a href="./index.html">WebStudio</a>
       <p>
-        Increase the flow of customers and <br />
-        sales for your business with digital <br />
+        Increase the flow of customers and 
+        sales for your business with digital 
         marketing & growth solutions.
       </p>
     </footer>
