--- a/index.html
+++ b/index.html
@@ -36,9 +36,8 @@
       </section 1>
 
       <section 2>
-        <span styles="visibility: hidden;">
-          <h2>hidden header</h2>
-        </span>
+        <!-- span styles="visibility: hidden;" -->
+          <h2>Hidden header</h2>
         <ul>
           <li>
             <h3>Strategy</h3>
