--- a/index.html
+++ b/index.html
@@ -30,14 +30,14 @@
     </header>
 
     <main>
-      <section 1>
+      <section>
         <h1>Effective Solutions for Your Business</h1>
         <button type="button">Order Service</button>
-      </section 1>
+      </section>
 
-      <section 2>
+      <section>
         <!-- span styles="visibility: hidden;" -->
-          <h2>Hidden header</h2>
+        <h2>Hidden header</h2>
         <ul>
           <li>
             <h3>Strategy</h3>
@@ -68,9 +68,9 @@
             </p>
           </li>
         </ul>
-      </section 2>
+      </section>
 
-      <section 3>
+      <section>
         <h2>Our Team</h2>
         <ul>
           <li>
@@ -117,15 +117,13 @@
             <p>UI Designer</p>
           </li>
         </ul>
-      </section 3>
-
+      </section>
     </main>
 
     <footer>
       <a href="./index.html">WebStudio</a>
       <p>
-        Increase the flow of customers and 
-        sales for your business with digital 
+        Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
     </footer>
