--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>WebStudio</title>
   </head>
   <body>
     <header>
@@ -37,7 +37,7 @@
 
       <section>
         <!-- span styles="visibility: hidden;" -->
-        <h2>Hidden header</h2>
+        <h2>Features</h2>
         <ul>
           <li>
             <h3>Strategy</h3>
